--- a/ProcessFiles/ExportCompletedWindow.xaml
+++ b/ProcessFiles/ExportCompletedWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="FileIO.ExportCompletedWindow"
+﻿<Window x:Class="ProcessFiles.ExportCompletedWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FileIO"
+        xmlns:local="clr-namespace:ProcessFiles"
         mc:Ignorable="d"
         Title="ExportCompletedWindow" SizeToContent="WidthAndHeight" d:DataContext="{d:DesignInstance local:ExportCompletedViewModel}">
   <Window.Resources>
