--- a/ProcessFiles/FileBrowse.xaml
+++ b/ProcessFiles/FileBrowse.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="FileIO.FileBrowse"
+﻿<UserControl x:Class="ProcessFiles.FileBrowse"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FileIO"
+             xmlns:local="clr-namespace:ProcessFiles"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" d:DataContext="{d:DesignInstance local:FileBrowseViewModel}">
   <UserControl.Resources>
