--- a/ProcessFiles/IoWindow.xaml
+++ b/ProcessFiles/IoWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="FileIO.IoWindow"
+﻿<Window x:Class="ProcessFiles.IoWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FileIO"
-        mc:Ignorable="d" d:DataContext="{d:DesignInstance local:IoAppViewModel}"
+        xmlns:local="clr-namespace:ProcessFiles"
+        mc:Ignorable="d" d:DataContext="{d:DesignInstance local:IoWindowViewModel}"
         Title="IoWindow" Width="450" Height="180" ResizeMode="NoResize">
   <Window.Resources>
     <ResourceDictionary>
